# demos

./: README.md  pai.repos
docs/: so_arm_demo.md
pai_bringup/scripts/: lerobot_inference_node
pai_mujoco/: CMakeLists.txt  package.xml
pai_mujoco/config/: ros2_controllers.yaml
pai_mujoco/launch/: so101.launch.py
pai_mujoco/rviz/: so_arm.rviz
pai_mujoco/urdf/: README.md  scene.xml  so_arm101.urdf.xacro
pai_mujoco/urdf/SO101/: so101_new_calib.urdf  so101_new_calib.xml
